fix: [WA-514] Hero overlap fix

--- a/docroot/themes/custom/wateraid/components/hero/hero.scss
+++ b/docroot/themes/custom/wateraid/components/hero/hero.scss
@@ -12,7 +12,6 @@
     @include desktop {
       @include page-container;
     }
-    position: relative;
   }
 
   .image,
@@ -30,7 +29,6 @@
     img {
       display: block;
       max-width: 100%;
-      max-height: calculate-rem(480);
       object-fit: cover;
       object-position: center;
     }
@@ -100,7 +98,7 @@
   &__donate {
     @include desktop() {
       position: absolute;
-      top: calculate-rem(-624);
+      top: 6rem;
       left: $wa-spacing-09;
       width: 50%;
       max-width: calculate-rem(660);
@@ -211,6 +209,11 @@
       display: flex;
       gap: $wa-spacing-06;
       flex-direction: column;
+      position: relative;
+    }
+
+    .hero__image img {
+      max-height: calculate-rem(480);
     }
   }
 
